force-app/main/default/objects/KimbleOne__Journey__c/KimbleOne__Journey__c.object-meta.xml
<CustomObject>
    <label>Journey</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>