force-app/main/default/objects/KimbleOne__Journey__c/fields/KimbleOne__EarliestLegDepartureTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestLegDepartureTime__c</fullName>
    <label>Start Time</label>
    <summarizedField>KimbleOne__JourneyLeg__c.KimbleOne__DepartureTime__c</summarizedField>
    <summaryForeignKey>KimbleOne__JourneyLeg__c.KimbleOne__Journey__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>