force-app/main/default/objects/KimbleOne__Journey__c/fields/KimbleOne__LatestLegArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestLegArrivalTime__c</fullName>
    <label>End Time</label>
    <summarizedField>KimbleOne__JourneyLeg__c.KimbleOne__ArrivalTime__c</summarizedField>
    <summaryForeignKey>KimbleOne__JourneyLeg__c.KimbleOne__Journey__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>