force-app/main/default/objects/KimbleOne__Journey__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__EarliestLegDepartureTime__c</columns>
    <columns>KimbleOne__LatestLegArrivalTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>