force-app/main/default/objects/KimbleOne__Journey__c/listViews/KimbleOne__MyJourneys.listView-meta.xml
<ListView>
    <fullName>KimbleOne__MyJourneys</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__EarliestLegDepartureTime__c</columns>
    <columns>KimbleOne__LatestLegArrivalTime__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Journeys</label>
    <language>en_US</language>
</ListView>